<menu xmlns:android="http://schemas.android.com/apk/res/android" >

     <item
        android:id="@+id/action_edit_event_save"
        android:icon="@drawable/ic_action_accept"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/save">
        </item>
    <item
        android:id="@+id/action_edit_event_microphone"
        android:icon="@drawable/ic_action_microphone"
        android:orderInCategory="101"
        android:showAsAction="always"
        android:title="@string/micro">
    </item>
    <item
        android:id="@+id/action_edit_event_map"
        android:icon="@drawable/ic_action_map"
        android:orderInCategory="102"
        android:showAsAction="always"
        android:title="@string/map">
    </item>
</menu>