<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:id="@+id/create_event_id"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:paddingTop="10dp" >

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" >

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="16sp" />

            <AutoCompleteTextView
                android:id="@+id/editTextToShowDesc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:completionThreshold="1"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/create_event_name_hint"
                android:inputType="textMultiLine"
                android:lines="2"
                android:maxLines="2"
                android:singleLine="false"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextToShowLocal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:focusable="false"
                android:hint="@string/create_event_location_hint"
                android:inputType="textMultiLine"
                android:lines="3"
                android:maxLines="4"
                android:singleLine="false"
                android:textSize="14sp" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="100dp"
            android:paddingRight="16dp" >

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Public" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Private" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="horizontal"
            android:paddingLeft="58dp"
            android:paddingRight="16dp" >

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:focusable="false"
                android:focusableInTouchMode="false" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="top" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextToShowDate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:focusable="false"
                android:hint="@string/create_event_date_hint"
                android:inputType="date"
                android:onClick="showDatePickerDialog"
                android:textSize="14sp" >
            </EditText>
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:gravity="top"
            android:paddingLeft="16dp"
            android:text="@string/image"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="fill_parent"
            android:layout_height="225dp"
            android:layout_gravity="top|center_horizontal"
            android:layout_margin="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:adjustViewBounds="true"
            android:background="@layout/image_border"
            android:scaleType="fitXY" />

    </LinearLayout>

</ScrollView>